blog/traefik/002-traefik-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik
    version: v2.2
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:2.2
          args:
            - --entryPoints.traefik.address=:9000
            - --entryPoints.web.address=:8000
            - --entryPoints.websecure.address=:8443
            - --api.dashboard=true
            - --api.insecure=true
            - --providers.kubernetesingress=true
          ports:
            - containerPort: 9000
              name: traefik
              protocol: TCP
            - containerPort: 8000
              name: web
              protocol: TCP
            - containerPort: 8443
              name: websecure
              protocol: TCP
