blog/traefik/003-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: traefik
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: traefik-dashboard
              servicePort: 9000
